--- a/src/scss/components/_feature.scss
+++ b/src/scss/components/_feature.scss
@@ -10,11 +10,15 @@
   text-align: center;
   .feature-image {
     flex: 0 0 auto;
-    width: 80px;
-    height: 80px;
+    width: auto;
+    height: auto;
     display: flex;
     margin-bottom: 20px;
     text-align: center;
+  }
+  .feature:hover {
+    border: 1px solid #3295c9;
+    box-shadow: 0px 0px 11px #3ea7de;
   }
   img {
     width: 100%;
